 NEWS/ChangeLog for rJava
--------------------------

0.4-7	(under development)
    o	Added .jgetEx and .jclear functions for querying and clearing
	of Java exceptions/throwables.

    o	Added .jthrow to allow throwing of exceptions from R code.

0.4-6	2006-08-20
    o	Fixed bug in initialization on Windows, introduced in 0.4-4

0.4-5	2006-06-24
    o	Added support for scalar bytes as .jbyte (byte arrays are still
	natively represented as RAW vectors)

    o	Added .r2j function which allows to push R objects into Java as
	references. This works only if R is run via JRI, because it
	requires a working Rengine instance.

0.4-4	2006-06-21
    o	Fixed bug that prevented loading into existing VM
	if the classpath contained duplicate items.
	.jmergeClassPath now filters out duplicate paths.

    o	.jcall and .jnew discard all named parameters that are passed
	as `...'. Named parameters are now reserved for future call options

    o	Converted all S3-methods into S4 methods.
	Also `show' is now used instead of `print' and the
	output format was changed.

    o	Protoype for jobjRef is now a valid null-Object

    o	Added .jequals and corresponding ==, != op methods.
	Currently == and != operators feature the same behavior as
	.jequals(...,strict=FALSE), i.e. scalar non-Java objects are
	converted into Java objects if possible and then compared, so
	 s <- .jnew("java/lang/String","foo")
	 s == "foo"  # returns TRUE

    o	Added .jinherits which allows to check Java-side
	inheritance using JNI (= isAssignableTo).

    o   Added .jfindClass and .jclassRef that return Java
	class object

    o	Added check parameter to .jcall and .jnew that allows the caller
	to prevent implicit call to .jcheck
	It is mainly useful in cases where silent operation
	is desired (e.g. in conjunction with try).
	Additionally, silent parameter was added to .jnew

    o	Added is.jnull which is like is.null but also returns
	TRUE if the supplied Java object is a null-reference
